fix home page background overflow

--- a/css/home_page.styl
+++ b/css/home_page.styl
@@ -6,7 +6,7 @@
   padding: 0;
 
   .home-section
-    overflow: auto;
+    overflow: hidden;
     width: 50%;
     min-height: 500px;
     position: relative;
